# YoutubeClient

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  Dockerfile  build.pl  com.chev.Youtube.yaml  libadwaita.json  main.c  subs (copy).json  subs.json
build-dir/: metadata
build-dir/files/include/libadwaita-1/: adw-enums.h  adw-version.h
build-dir/files/lib/: libadwaita-1.so.0
build-dir/files/lib/debug/lib/: libadwaita-1.so.0.debug
build-dir/files/lib/girepository-1.0/: Adw-1.typelib
build-dir/files/lib/pkgconfig/: libadwaita-1.pc
build-dir/files/share/gir-1.0/: Adw-1.gir
build-dir/files/share/runtime/locale/ca/share/ca/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/es/share/es/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/fur/share/fur/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/pt/share/pt_BR/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/ro/share/ro/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/sv/share/sv/LC_MESSAGES/: libadwaita.mo
build-dir/files/share/runtime/locale/uk/share/uk/LC_MESSAGES/: libadwaita.mo
gui/: MainApplication.c  MainApplication.c~  MainApplication.h
pinebuild/: install_manifest.txt
ui/: FeedBox.ui  MainWindow.ui  Player.ui~  SubBox.ui
youtube/: CSubs.cpp  CSubs.h  Channel.cpp  Channel.h  Net.cpp  Net.h  Subscriptions.cpp  Subscriptions.cpp~  Subscriptions.h  Subscriptions.h~  Video.cpp  Video.h  json.hpp
